--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,7 @@
     /*header (INICIO)de mensaje con promociones del dia, Mi idea es que las redes sociales queden con un tamaño chico en el borde superior izquierdo , para un facil acceso a las mismas , y que el mensaje de promocion este centrado , es un mensaje que constantemente va cambiando dependiendo el dia y dependiendo la promocion*/
 .header_aviso{
     background-color: yellow;
-    height: 21px;
+    height: 21px;;
     p{
         color: black;
         font-family: monospace;
@@ -29,45 +29,6 @@ text-align: center;
 
 /*barra de navegacion*/
     
-.Header_navbar{
-    font-family: sans-serif;
-    width: 100%;
-    background: black;
-}
-header label{
-    display: none;
-    width: 30px;
-    height: 30px;
-    padding: 10px;
-}
-header label:hover{
-    cursor: pointer; 
-    background: rgba(230, 230, 230, 0.3);   
-}
-#btn-menu{
-    display: block;
-}
-.menu{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    justify-content: center;
-}
-.menu ul{
-    display: flex;
-    text-align: center;
-    margin: 0;
-    list-style: none;
-    padding: 0; 
-}
-.menu li{
-    padding: 15px;
-    text-decoration: none;
-}
-
-menu li:hover{
-    background:red;
-}
     
     
     
