--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -128,6 +128,9 @@
     grid-column-end: -1 ;
     display: flex;
     justify-content: center;
+    img{
+        margin: 20px;
+    }
 }
 
 .mensajefinal{
