--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -21,8 +21,9 @@
     font-family: monospace;
     background-color: black;
     border: 1px solid white;
-    width: 450px;
-    margin: 10px;
+    width: auto;
+    max-width: 450px;
+    margin-bottom: 15px;
     padding: 10px 20px;
     box-sizing: border-box;
     border-radius: 7px;
@@ -59,7 +60,7 @@
 
 .listaContacto{
     font-family: monospace;
-    width: 450px;
+    width: auto;
     padding: 10px 20px;
     border-radius: 7px;
     background-color: white;
