--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -2,7 +2,7 @@
 /*media queries*/
 @media ( max-width: 320px){
 
-
+    margin: 0;
     // Inicio 
         .somosJano{
             grid-column-start: 1;
